UI: navbar improvements and gitignore cleanup

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -39,3 +39,20 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python
+venv/
+backend/venv/
+__pycache__/
+*.pyc
+
+# Node
+node_modules/
+
+# OS
+.DS_Store
+# Python
+backend/venv/
+backend/__pycache__/
+**/__pycache__/
+*.pyc
