--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,7 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 DATABASE_URL=postgresql://user:password@host:5432/dbname
 CORS_ORIGINS=["https://your-app.vercel.app"]
+
+# Email (Brevo REST API)
+BREVO_API_KEY=your-brevo-api-key
+SMTP_FROM=HirePrep <your-email@example.com>
