Chnaged deployment from master to feature/aptitude

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [feature/aptitude]
   pull_request:
-    branches: [main]
+    branches: [feature/aptitude]
 
 jobs:
   backend-ci:
