--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ cryptography==46.0.5
 Deprecated==1.3.1
 ecdsa==0.19.1
 fastapi==0.129.0
+google-auth==2.48.0
 greenlet==3.3.1
 h11==0.16.0
 httpcore==1.0.9
